hw3/y.output
Terminals unused in grammar

    SEMICOLON


Grammar

    0 $accept: Program $end

    1 Program: Start StatementList

    2 Start: %empty

    3 StatementList: Statement ';' StatementList
    4              | Statement ';'
    5              | WHILE '(' InterWhileCond Expr Cond WhileLeaveExpr ')' NewScope StatementList while_end StatementList
    6              | WHILE '(' InterWhileCond Expr Cond WhileLeaveExpr ')' NewScope StatementList while_end
    7              | FOR '(' Expr LeaveExpr Assign ';' PrintForLabel Expr Cond ForLeaveExpr ';' Expr LeaveExpr ForAssign ')' NewScope StatementList for_end StatementList
    8              | FOR '(' Expr LeaveExpr Assign ';' PrintForLabel Expr Cond ForLeaveExpr ';' Expr LeaveExpr ForAssign ')' NewScope StatementList for_end
    9              | IfStmt
   10              | IfStmt StatementList

   11 InterWhileCond: %empty

   12 WhileLeaveExpr: LeaveExpr

   13 while_end: EndScope

   14 PrintForLabel: %empty

   15 ForLeaveExpr: LeaveExpr

   16 ForAssign: Assign

   17 for_end: EndScope

   18 IfStmt: IF '(' Expr Cond IfLeaveExpr ')' NewScope StatementList IfEndScope ElseStmt

   19 ElseStmt: ELSE IF '(' Expr ElseLeaveExpr ')' NewScope StatementList ElseEndScope ElseStmt
   20         | ELSE NewScope StatementList EndScope
   21         | %empty

   22 IfLeaveExpr: LeaveExpr

   23 ElseLeaveExpr: LeaveExpr

   24 IfEndScope: EndScope

   25 ElseEndScope: EndScope

   26 Cond: %empty

   27 NewScope: '{'

   28 EndScope: '}'

   29 Statement: DeclarationStmt
   30          | Expr LeaveExpr Assign
   31          | LoopStmt
   32          | PrintStmt

   33 DeclarationStmt: Type Ident LitInit
   34                | Type Ident IndHead Expr IndEnd

   35 Type: TypeName

   36 TypeName: INT
   37         | FLOAT
   38         | STRING
   39         | BOOL

   40 Ident: IDENT

   41 LitInit: '=' Literal
   42        | '=' Boolean
   43        | %empty

   44 Literal: INT_LIT
   45        | FLOAT_LIT
   46        | '"' str '"'

   47 str: STRING_LIT

   48 Expr: AndExpr or Expr
   49     | AndExpr

   50 LeaveExpr: %empty

   51 or: OR

   52 Assign: AssignOptr ErrLHS Expr LeaveExpr
   53       | %empty

   54 AssignOptr: '='
   55           | ADD_ASSIGN
   56           | SUB_ASSIGN
   57           | MUL_ASSIGN
   58           | QUO_ASSIGN
   59           | REM_ASSIGN

   60 ErrLHS: %empty

   61 AndExpr: CmprExpr and AndExpr
   62        | CmprExpr

   63 and: AND

   64 CmprExpr: CmprExpr Cmpr AddExpr
   65         | AddExpr

   66 Cmpr: '<'
   67     | '>'
   68     | SMALL_EQU
   69     | BIG_EQU
   70     | EQUAL
   71     | NOT_EQUAL

   72 AddExpr: MulExpr Add AddExpr
   73        | MulExpr

   74 Add: '+'
   75    | '-'

   76 MulExpr: UnaExpr Mul MulExpr
   77        | UnaExpr

   78 Mul: '*'
   79    | '/'
   80    | '%'

   81 UnaExpr: SignOpt Atom
   82        | Reverse Boolean

   83 SignOpt: '+' SignOpt
   84        | '-' SignOpt
   85        | %empty

   86 Reverse: '!' Reverse
   87        | %empty

   88 Atom: Ident
   89     | Ident INC
   90     | Ident DEC
   91     | INC Ident
   92     | DEC Ident
   93     | Literal
   94     | BracHead Expr BracEnd
   95     | Ident IndHead Expr IndEnd
   96     | EnterCast TypeName ')' Ident
   97     | EnterCast TypeName ')' Literal
   98     | EnterCast TypeName ')' Ident IndHead Expr IndEnd

   99 EnterCast: '('

  100 Boolean: TRUE
  101        | FALSE

  102 PrintStmt: PRINT EnterPrint Expr LeavePrint

  103 EnterPrint: '('

  104 LeavePrint: ')'

  105 IndHead: '['

  106 IndEnd: ']'

  107 BracHead: '('

  108 BracEnd: ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 86
    '"' (34) 46
    '%' (37) 80
    '(' (40) 5 6 7 8 18 19 99 103 107
    ')' (41) 5 6 7 8 18 19 96 97 98 104 108
    '*' (42) 78
    '+' (43) 74 83
    '-' (45) 75 84
    '/' (47) 79
    ';' (59) 3 4 7 8
    '<' (60) 66
    '=' (61) 41 42 54
    '>' (62) 67
    '[' (91) 105
    ']' (93) 106
    '{' (123) 27
    '}' (125) 28
    error (256)
    INT (258) 36
    FLOAT (259) 37
    BOOL (260) 39
    STRING (261) 38
    SEMICOLON (262)
    LoopStmt (263) 31
    PRINT (264) 102
    INC (265) 89 91
    DEC (266) 90 92
    BIG_EQU (267) 69
    SMALL_EQU (268) 68
    EQUAL (269) 70
    NOT_EQUAL (270) 71
    AND (271) 63
    OR (272) 51
    TRUE (273) 100
    FALSE (274) 101
    IF (275) 18 19
    ELSE (276) 19 20
    WHILE (277) 5 6
    FOR (278) 7 8
    ADD_ASSIGN (279) 55
    SUB_ASSIGN (280) 56
    MUL_ASSIGN (281) 57
    QUO_ASSIGN (282) 58
    REM_ASSIGN (283) 59
    INT_LIT <i_val> (284) 44
    FLOAT_LIT <f_val> (285) 45
    STRING_LIT <s_val> (286) 47
    IDENT <s_val> (287) 40


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    Program (51)
        on left: 1
        on right: 0
    Start (52)
        on left: 2
        on right: 1
    StatementList (53)
        on left: 3 4 5 6 7 8 9 10
        on right: 1 3 5 6 7 8 10 18 19 20
    InterWhileCond (54)
        on left: 11
        on right: 5 6
    WhileLeaveExpr (55)
        on left: 12
        on right: 5 6
    while_end (56)
        on left: 13
        on right: 5 6
    PrintForLabel (57)
        on left: 14
        on right: 7 8
    ForLeaveExpr (58)
        on left: 15
        on right: 7 8
    ForAssign (59)
        on left: 16
        on right: 7 8
    for_end (60)
        on left: 17
        on right: 7 8
    IfStmt (61)
        on left: 18
        on right: 9 10
    ElseStmt (62)
        on left: 19 20 21
        on right: 18 19
    IfLeaveExpr (63)
        on left: 22
        on right: 18
    ElseLeaveExpr (64)
        on left: 23
        on right: 19
    IfEndScope (65)
        on left: 24
        on right: 18
    ElseEndScope (66)
        on left: 25
        on right: 19
    Cond (67)
        on left: 26
        on right: 5 6 7 8 18
    NewScope (68)
        on left: 27
        on right: 5 6 7 8 18 19 20
    EndScope (69)
        on left: 28
        on right: 13 17 20 24 25
    Statement (70)
        on left: 29 30 31 32
        on right: 3 4
    DeclarationStmt (71)
        on left: 33 34
        on right: 29
    Type (72)
        on left: 35
        on right: 33 34
    TypeName (73)
        on left: 36 37 38 39
        on right: 35 96 97 98
    Ident (74)
        on left: 40
        on right: 33 34 88 89 90 91 92 95 96 98
    LitInit (75)
        on left: 41 42 43
        on right: 33
    Literal (76)
        on left: 44 45 46
        on right: 41 93 97
    str (77)
        on left: 47
        on right: 46
    Expr (78)
        on left: 48 49
        on right: 5 6 7 8 18 19 30 34 48 52 94 95 98 102
    LeaveExpr (79)
        on left: 50
        on right: 7 8 12 15 22 23 30 52
    or (80)
        on left: 51
        on right: 48
    Assign (81)
        on left: 52 53
        on right: 7 8 16 30
    AssignOptr (82)
        on left: 54 55 56 57 58 59
        on right: 52
    ErrLHS (83)
        on left: 60
        on right: 52
    AndExpr (84)
        on left: 61 62
        on right: 48 49 61
    and (85)
        on left: 63
        on right: 61
    CmprExpr (86)
        on left: 64 65
        on right: 61 62 64
    Cmpr (87)
        on left: 66 67 68 69 70 71
        on right: 64
    AddExpr (88)
        on left: 72 73
        on right: 64 65 72
    Add (89)
        on left: 74 75
        on right: 72
    MulExpr (90)
        on left: 76 77
        on right: 72 73 76
    Mul (91)
        on left: 78 79 80
        on right: 76
    UnaExpr (92)
        on left: 81 82
        on right: 76 77
    SignOpt (93)
        on left: 83 84 85
        on right: 81 83 84
    Reverse (94)
        on left: 86 87
        on right: 82 86
    Atom (95)
        on left: 88 89 90 91 92 93 94 95 96 97 98
        on right: 81
    EnterCast (96)
        on left: 99
        on right: 96 97 98
    Boolean (97)
        on left: 100 101
        on right: 42 82
    PrintStmt (98)
        on left: 102
        on right: 32
    EnterPrint (99)
        on left: 103
        on right: 102
    LeavePrint (100)
        on left: 104
        on right: 102
    IndHead (101)
        on left: 105
        on right: 34 95 98
    IndEnd (102)
        on left: 106
        on right: 34 95 98
    BracHead (103)
        on left: 107
        on right: 94
    BracEnd (104)
        on left: 108
        on right: 94


State 0

    0 $accept: . Program $end

    $default  reduce using rule 2 (Start)

    Program  go to state 1
    Start    go to state 2


State 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


State 2

    1 Program: Start . StatementList

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    BOOL      shift, and go to state 6
    STRING    shift, and go to state 7
    LoopStmt  shift, and go to state 8
    PRINT     shift, and go to state 9
    IF        shift, and go to state 10
    WHILE     shift, and go to state 11
    FOR       shift, and go to state 12
    '+'       shift, and go to state 13
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    StatementList    go to state 16
    IfStmt           go to state 17
    Statement        go to state 18
    DeclarationStmt  go to state 19
    Type             go to state 20
    TypeName         go to state 21
    Expr             go to state 22
    AndExpr          go to state 23
    CmprExpr         go to state 24
    AddExpr          go to state 25
    MulExpr          go to state 26
    UnaExpr          go to state 27
    SignOpt          go to state 28
    Reverse          go to state 29
    PrintStmt        go to state 30


State 3

    0 $accept: Program $end .

    $default  accept


State 4

   36 TypeName: INT .

    $default  reduce using rule 36 (TypeName)


State 5

   37 TypeName: FLOAT .

    $default  reduce using rule 37 (TypeName)


State 6

   39 TypeName: BOOL .

    $default  reduce using rule 39 (TypeName)


State 7

   38 TypeName: STRING .

    $default  reduce using rule 38 (TypeName)


State 8

   31 Statement: LoopStmt .

    $default  reduce using rule 31 (Statement)


State 9

  102 PrintStmt: PRINT . EnterPrint Expr LeavePrint

    '('  shift, and go to state 31

    EnterPrint  go to state 32


State 10

   18 IfStmt: IF . '(' Expr Cond IfLeaveExpr ')' NewScope StatementList IfEndScope ElseStmt

    '('  shift, and go to state 33


State 11

    5 StatementList: WHILE . '(' InterWhileCond Expr Cond WhileLeaveExpr ')' NewScope StatementList while_end StatementList
    6              | WHILE . '(' InterWhileCond Expr Cond WhileLeaveExpr ')' NewScope StatementList while_end

    '('  shift, and go to state 34


State 12

    7 StatementList: FOR . '(' Expr LeaveExpr Assign ';' PrintForLabel Expr Cond ForLeaveExpr ';' Expr LeaveExpr ForAssign ')' NewScope StatementList for_end StatementList
    8              | FOR . '(' Expr LeaveExpr Assign ';' PrintForLabel Expr Cond ForLeaveExpr ';' Expr LeaveExpr ForAssign ')' NewScope StatementList for_end

    '('  shift, and go to state 35


State 13

   83 SignOpt: '+' . SignOpt

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14

    $default  reduce using rule 85 (SignOpt)

    SignOpt  go to state 36


State 14

   84 SignOpt: '-' . SignOpt

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14

    $default  reduce using rule 85 (SignOpt)

    SignOpt  go to state 37


State 15

   86 Reverse: '!' . Reverse

    '!'  shift, and go to state 15

    $default  reduce using rule 87 (Reverse)

    Reverse  go to state 38


State 16

    1 Program: Start StatementList .

    $default  reduce using rule 1 (Program)


State 17

    9 StatementList: IfStmt .
   10              | IfStmt . StatementList

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    BOOL      shift, and go to state 6
    STRING    shift, and go to state 7
    LoopStmt  shift, and go to state 8
    PRINT     shift, and go to state 9
    IF        shift, and go to state 10
    WHILE     shift, and go to state 11
    FOR       shift, and go to state 12
    '+'       shift, and go to state 13
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15

    $end      reduce using rule 9 (StatementList)
    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    '}'       reduce using rule 9 (StatementList)
    $default  reduce using rule 85 (SignOpt)

    StatementList    go to state 39
    IfStmt           go to state 17
    Statement        go to state 18
    DeclarationStmt  go to state 19
    Type             go to state 20
    TypeName         go to state 21
    Expr             go to state 22
    AndExpr          go to state 23
    CmprExpr         go to state 24
    AddExpr          go to state 25
    MulExpr          go to state 26
    UnaExpr          go to state 27
    SignOpt          go to state 28
    Reverse          go to state 29
    PrintStmt        go to state 30


State 18

    3 StatementList: Statement . ';' StatementList
    4              | Statement . ';'

    ';'  shift, and go to state 40


State 19

   29 Statement: DeclarationStmt .

    $default  reduce using rule 29 (Statement)


State 20

   33 DeclarationStmt: Type . Ident LitInit
   34                | Type . Ident IndHead Expr IndEnd

    IDENT  shift, and go to state 41

    Ident  go to state 42


State 21

   35 Type: TypeName .

    $default  reduce using rule 35 (Type)


State 22

   30 Statement: Expr . LeaveExpr Assign

    $default  reduce using rule 50 (LeaveExpr)

    LeaveExpr  go to state 43


State 23

   48 Expr: AndExpr . or Expr
   49     | AndExpr .

    OR  shift, and go to state 44

    $default  reduce using rule 49 (Expr)

    or  go to state 45


State 24

   61 AndExpr: CmprExpr . and AndExpr
   62        | CmprExpr .
   64 CmprExpr: CmprExpr . Cmpr AddExpr

    BIG_EQU    shift, and go to state 46
    SMALL_EQU  shift, and go to state 47
    EQUAL      shift, and go to state 48
    NOT_EQUAL  shift, and go to state 49
    AND        shift, and go to state 50
    '<'        shift, and go to state 51
    '>'        shift, and go to state 52

    $default  reduce using rule 62 (AndExpr)

    and   go to state 53
    Cmpr  go to state 54


State 25

   65 CmprExpr: AddExpr .

    $default  reduce using rule 65 (CmprExpr)


State 26

   72 AddExpr: MulExpr . Add AddExpr
   73        | MulExpr .

    '+'  shift, and go to state 55
    '-'  shift, and go to state 56

    $default  reduce using rule 73 (AddExpr)

    Add  go to state 57


State 27

   76 MulExpr: UnaExpr . Mul MulExpr
   77        | UnaExpr .

    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60

    $default  reduce using rule 77 (MulExpr)

    Mul  go to state 61


State 28

   81 UnaExpr: SignOpt . Atom

    INC        shift, and go to state 62
    DEC        shift, and go to state 63
    INT_LIT    shift, and go to state 64
    FLOAT_LIT  shift, and go to state 65
    IDENT      shift, and go to state 41
    '('        shift, and go to state 66
    '"'        shift, and go to state 67

    Ident      go to state 68
    Literal    go to state 69
    Atom       go to state 70
    EnterCast  go to state 71
    BracHead   go to state 72


State 29

   82 UnaExpr: Reverse . Boolean

    TRUE   shift, and go to state 73
    FALSE  shift, and go to state 74

    Boolean  go to state 75


State 30

   32 Statement: PrintStmt .

    $default  reduce using rule 32 (Statement)


State 31

  103 EnterPrint: '(' .

    $default  reduce using rule 103 (EnterPrint)


State 32

  102 PrintStmt: PRINT EnterPrint . Expr LeavePrint

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    Expr      go to state 76
    AndExpr   go to state 23
    CmprExpr  go to state 24
    AddExpr   go to state 25
    MulExpr   go to state 26
    UnaExpr   go to state 27
    SignOpt   go to state 28
    Reverse   go to state 29


State 33

   18 IfStmt: IF '(' . Expr Cond IfLeaveExpr ')' NewScope StatementList IfEndScope ElseStmt

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    Expr      go to state 77
    AndExpr   go to state 23
    CmprExpr  go to state 24
    AddExpr   go to state 25
    MulExpr   go to state 26
    UnaExpr   go to state 27
    SignOpt   go to state 28
    Reverse   go to state 29


State 34

    5 StatementList: WHILE '(' . InterWhileCond Expr Cond WhileLeaveExpr ')' NewScope StatementList while_end StatementList
    6              | WHILE '(' . InterWhileCond Expr Cond WhileLeaveExpr ')' NewScope StatementList while_end

    $default  reduce using rule 11 (InterWhileCond)

    InterWhileCond  go to state 78


State 35

    7 StatementList: FOR '(' . Expr LeaveExpr Assign ';' PrintForLabel Expr Cond ForLeaveExpr ';' Expr LeaveExpr ForAssign ')' NewScope StatementList for_end StatementList
    8              | FOR '(' . Expr LeaveExpr Assign ';' PrintForLabel Expr Cond ForLeaveExpr ';' Expr LeaveExpr ForAssign ')' NewScope StatementList for_end

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    Expr      go to state 79
    AndExpr   go to state 23
    CmprExpr  go to state 24
    AddExpr   go to state 25
    MulExpr   go to state 26
    UnaExpr   go to state 27
    SignOpt   go to state 28
    Reverse   go to state 29


State 36

   83 SignOpt: '+' SignOpt .

    $default  reduce using rule 83 (SignOpt)


State 37

   84 SignOpt: '-' SignOpt .

    $default  reduce using rule 84 (SignOpt)


State 38

   86 Reverse: '!' Reverse .

    $default  reduce using rule 86 (Reverse)


State 39

   10 StatementList: IfStmt StatementList .

    $default  reduce using rule 10 (StatementList)


State 40

    3 StatementList: Statement ';' . StatementList
    4              | Statement ';' .

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    BOOL      shift, and go to state 6
    STRING    shift, and go to state 7
    LoopStmt  shift, and go to state 8
    PRINT     shift, and go to state 9
    IF        shift, and go to state 10
    WHILE     shift, and go to state 11
    FOR       shift, and go to state 12
    '+'       shift, and go to state 13
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15

    $end      reduce using rule 4 (StatementList)
    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    '}'       reduce using rule 4 (StatementList)
    $default  reduce using rule 85 (SignOpt)

    StatementList    go to state 80
    IfStmt           go to state 17
    Statement        go to state 18
    DeclarationStmt  go to state 19
    Type             go to state 20
    TypeName         go to state 21
    Expr             go to state 22
    AndExpr          go to state 23
    CmprExpr         go to state 24
    AddExpr          go to state 25
    MulExpr          go to state 26
    UnaExpr          go to state 27
    SignOpt          go to state 28
    Reverse          go to state 29
    PrintStmt        go to state 30


State 41

   40 Ident: IDENT .

    $default  reduce using rule 40 (Ident)


State 42

   33 DeclarationStmt: Type Ident . LitInit
   34                | Type Ident . IndHead Expr IndEnd

    '='  shift, and go to state 81
    '['  shift, and go to state 82

    $default  reduce using rule 43 (LitInit)

    LitInit  go to state 83
    IndHead  go to state 84


State 43

   30 Statement: Expr LeaveExpr . Assign

    ADD_ASSIGN  shift, and go to state 85
    SUB_ASSIGN  shift, and go to state 86
    MUL_ASSIGN  shift, and go to state 87
    QUO_ASSIGN  shift, and go to state 88
    REM_ASSIGN  shift, and go to state 89
    '='         shift, and go to state 90

    $default  reduce using rule 53 (Assign)

    Assign      go to state 91
    AssignOptr  go to state 92


State 44

   51 or: OR .

    $default  reduce using rule 51 (or)


State 45

   48 Expr: AndExpr or . Expr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    Expr      go to state 93
    AndExpr   go to state 23
    CmprExpr  go to state 24
    AddExpr   go to state 25
    MulExpr   go to state 26
    UnaExpr   go to state 27
    SignOpt   go to state 28
    Reverse   go to state 29


State 46

   69 Cmpr: BIG_EQU .

    $default  reduce using rule 69 (Cmpr)


State 47

   68 Cmpr: SMALL_EQU .

    $default  reduce using rule 68 (Cmpr)


State 48

   70 Cmpr: EQUAL .

    $default  reduce using rule 70 (Cmpr)


State 49

   71 Cmpr: NOT_EQUAL .

    $default  reduce using rule 71 (Cmpr)


State 50

   63 and: AND .

    $default  reduce using rule 63 (and)


State 51

   66 Cmpr: '<' .

    $default  reduce using rule 66 (Cmpr)


State 52

   67 Cmpr: '>' .

    $default  reduce using rule 67 (Cmpr)


State 53

   61 AndExpr: CmprExpr and . AndExpr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    AndExpr   go to state 94
    CmprExpr  go to state 24
    AddExpr   go to state 25
    MulExpr   go to state 26
    UnaExpr   go to state 27
    SignOpt   go to state 28
    Reverse   go to state 29


State 54

   64 CmprExpr: CmprExpr Cmpr . AddExpr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    AddExpr  go to state 95
    MulExpr  go to state 26
    UnaExpr  go to state 27
    SignOpt  go to state 28
    Reverse  go to state 29


State 55

   74 Add: '+' .

    $default  reduce using rule 74 (Add)


State 56

   75 Add: '-' .

    $default  reduce using rule 75 (Add)


State 57

   72 AddExpr: MulExpr Add . AddExpr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    AddExpr  go to state 96
    MulExpr  go to state 26
    UnaExpr  go to state 27
    SignOpt  go to state 28
    Reverse  go to state 29


State 58

   78 Mul: '*' .

    $default  reduce using rule 78 (Mul)


State 59

   79 Mul: '/' .

    $default  reduce using rule 79 (Mul)


State 60

   80 Mul: '%' .

    $default  reduce using rule 80 (Mul)


State 61

   76 MulExpr: UnaExpr Mul . MulExpr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    MulExpr  go to state 97
    UnaExpr  go to state 27
    SignOpt  go to state 28
    Reverse  go to state 29


State 62

   91 Atom: INC . Ident

    IDENT  shift, and go to state 41

    Ident  go to state 98


State 63

   92 Atom: DEC . Ident

    IDENT  shift, and go to state 41

    Ident  go to state 99


State 64

   44 Literal: INT_LIT .

    $default  reduce using rule 44 (Literal)


State 65

   45 Literal: FLOAT_LIT .

    $default  reduce using rule 45 (Literal)


State 66

   99 EnterCast: '(' .
  107 BracHead: '(' .

    INT       reduce using rule 99 (EnterCast)
    FLOAT     reduce using rule 99 (EnterCast)
    BOOL      reduce using rule 99 (EnterCast)
    STRING    reduce using rule 99 (EnterCast)
    $default  reduce using rule 107 (BracHead)


State 67

   46 Literal: '"' . str '"'

    STRING_LIT  shift, and go to state 100

    str  go to state 101


State 68

   88 Atom: Ident .
   89     | Ident . INC
   90     | Ident . DEC
   95     | Ident . IndHead Expr IndEnd

    INC  shift, and go to state 102
    DEC  shift, and go to state 103
    '['  shift, and go to state 82

    $default  reduce using rule 88 (Atom)

    IndHead  go to state 104


State 69

   93 Atom: Literal .

    $default  reduce using rule 93 (Atom)


State 70

   81 UnaExpr: SignOpt Atom .

    $default  reduce using rule 81 (UnaExpr)


State 71

   96 Atom: EnterCast . TypeName ')' Ident
   97     | EnterCast . TypeName ')' Literal
   98     | EnterCast . TypeName ')' Ident IndHead Expr IndEnd

    INT     shift, and go to state 4
    FLOAT   shift, and go to state 5
    BOOL    shift, and go to state 6
    STRING  shift, and go to state 7

    TypeName  go to state 105


State 72

   94 Atom: BracHead . Expr BracEnd

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    Expr      go to state 106
    AndExpr   go to state 23
    CmprExpr  go to state 24
    AddExpr   go to state 25
    MulExpr   go to state 26
    UnaExpr   go to state 27
    SignOpt   go to state 28
    Reverse   go to state 29


State 73

  100 Boolean: TRUE .

    $default  reduce using rule 100 (Boolean)


State 74

  101 Boolean: FALSE .

    $default  reduce using rule 101 (Boolean)


State 75

   82 UnaExpr: Reverse Boolean .

    $default  reduce using rule 82 (UnaExpr)


State 76

  102 PrintStmt: PRINT EnterPrint Expr . LeavePrint

    ')'  shift, and go to state 107

    LeavePrint  go to state 108


State 77

   18 IfStmt: IF '(' Expr . Cond IfLeaveExpr ')' NewScope StatementList IfEndScope ElseStmt

    $default  reduce using rule 26 (Cond)

    Cond  go to state 109


State 78

    5 StatementList: WHILE '(' InterWhileCond . Expr Cond WhileLeaveExpr ')' NewScope StatementList while_end StatementList
    6              | WHILE '(' InterWhileCond . Expr Cond WhileLeaveExpr ')' NewScope StatementList while_end

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    Expr      go to state 110
    AndExpr   go to state 23
    CmprExpr  go to state 24
    AddExpr   go to state 25
    MulExpr   go to state 26
    UnaExpr   go to state 27
    SignOpt   go to state 28
    Reverse   go to state 29


State 79

    7 StatementList: FOR '(' Expr . LeaveExpr Assign ';' PrintForLabel Expr Cond ForLeaveExpr ';' Expr LeaveExpr ForAssign ')' NewScope StatementList for_end StatementList
    8              | FOR '(' Expr . LeaveExpr Assign ';' PrintForLabel Expr Cond ForLeaveExpr ';' Expr LeaveExpr ForAssign ')' NewScope StatementList for_end

    $default  reduce using rule 50 (LeaveExpr)

    LeaveExpr  go to state 111


State 80

    3 StatementList: Statement ';' StatementList .

    $default  reduce using rule 3 (StatementList)


State 81

   41 LitInit: '=' . Literal
   42        | '=' . Boolean

    TRUE       shift, and go to state 73
    FALSE      shift, and go to state 74
    INT_LIT    shift, and go to state 64
    FLOAT_LIT  shift, and go to state 65
    '"'        shift, and go to state 67

    Literal  go to state 112
    Boolean  go to state 113


State 82

  105 IndHead: '[' .

    $default  reduce using rule 105 (IndHead)


State 83

   33 DeclarationStmt: Type Ident LitInit .

    $default  reduce using rule 33 (DeclarationStmt)


State 84

   34 DeclarationStmt: Type Ident IndHead . Expr IndEnd

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    Expr      go to state 114
    AndExpr   go to state 23
    CmprExpr  go to state 24
    AddExpr   go to state 25
    MulExpr   go to state 26
    UnaExpr   go to state 27
    SignOpt   go to state 28
    Reverse   go to state 29


State 85

   55 AssignOptr: ADD_ASSIGN .

    $default  reduce using rule 55 (AssignOptr)


State 86

   56 AssignOptr: SUB_ASSIGN .

    $default  reduce using rule 56 (AssignOptr)


State 87

   57 AssignOptr: MUL_ASSIGN .

    $default  reduce using rule 57 (AssignOptr)


State 88

   58 AssignOptr: QUO_ASSIGN .

    $default  reduce using rule 58 (AssignOptr)


State 89

   59 AssignOptr: REM_ASSIGN .

    $default  reduce using rule 59 (AssignOptr)


State 90

   54 AssignOptr: '=' .

    $default  reduce using rule 54 (AssignOptr)


State 91

   30 Statement: Expr LeaveExpr Assign .

    $default  reduce using rule 30 (Statement)


State 92

   52 Assign: AssignOptr . ErrLHS Expr LeaveExpr

    $default  reduce using rule 60 (ErrLHS)

    ErrLHS  go to state 115


State 93

   48 Expr: AndExpr or Expr .

    $default  reduce using rule 48 (Expr)


State 94

   61 AndExpr: CmprExpr and AndExpr .

    $default  reduce using rule 61 (AndExpr)


State 95

   64 CmprExpr: CmprExpr Cmpr AddExpr .

    $default  reduce using rule 64 (CmprExpr)


State 96

   72 AddExpr: MulExpr Add AddExpr .

    $default  reduce using rule 72 (AddExpr)


State 97

   76 MulExpr: UnaExpr Mul MulExpr .

    $default  reduce using rule 76 (MulExpr)


State 98

   91 Atom: INC Ident .

    $default  reduce using rule 91 (Atom)


State 99

   92 Atom: DEC Ident .

    $default  reduce using rule 92 (Atom)


State 100

   47 str: STRING_LIT .

    $default  reduce using rule 47 (str)


State 101

   46 Literal: '"' str . '"'

    '"'  shift, and go to state 116


State 102

   89 Atom: Ident INC .

    $default  reduce using rule 89 (Atom)


State 103

   90 Atom: Ident DEC .

    $default  reduce using rule 90 (Atom)


State 104

   95 Atom: Ident IndHead . Expr IndEnd

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '!'  shift, and go to state 15

    TRUE      reduce using rule 87 (Reverse)
    FALSE     reduce using rule 87 (Reverse)
    $default  reduce using rule 85 (SignOpt)

    Expr      go to state 117
    AndExpr   go to state 23
    CmprExpr  go to state 24
    AddExpr   go to state 25
    MulExpr   go to state 26
    UnaExpr   go to state 27
    SignOpt   go to state 28
    Reverse   go to state 29


State 105

   96 Atom: EnterCast TypeName . ')' Ident
   97     | EnterCast TypeName . ')' Literal
   98     | EnterCast TypeName . ')' Ident IndHead Expr IndEnd

    ')'  shift, and go to state 118


State 106

   94 Atom: BracHead Expr . BracEnd

    ')'  shift, and go to state 119

    BracEnd  go to state 120


State 107

  104 LeavePrint: ')' .

    $default  reduce using rule 104 (LeavePrint)


State 108

  102 PrintStmt: PRINT EnterPrint Expr LeavePrint .

    $default  reduce using rule 102 (PrintStmt)


State 109

   18 IfStmt: IF '(' Expr Cond . IfLeaveExpr ')' NewScope StatementList IfEndScope ElseStmt

    $default  reduce using rule 50 (LeaveExpr)

    IfLeaveExpr  go to state 121
    LeaveExpr    go to state 122


State 110

    5 StatementList: WHILE '(' InterWhileCond Expr . Cond WhileLeaveExpr ')' NewScope StatementList while_end StatementList
    6              | WHILE '(' InterWhileCond Expr . Cond WhileLeaveExpr ')' NewScope StatementList while_end

    $default  reduce using rule 26 (Cond)

    Cond  go to state 123


State 111
